fix(register): resolve overflow issue causing white space on scroll

--- a/css/register.css
+++ b/css/register.css
@@ -1,3 +1,9 @@
+html,
+body {
+    overflow: hidden;
+    height: 100%;
+}
+
 .form-register {
     display: flex;
     justify-content: center;
